# ships

./: CMakeLists.txt  CMakeLists_Client_Server.txt  README.md  WIN_CMakeLists.txt  dockerfile  tz.md
src/: client_main.cpp  main.cpp  server_main.cpp
src/game/: BotsAction.cpp  EndGame.cpp  Game.cpp  Game.h  GameConfig.cpp  GameConfig.h  GameEvents.cpp  GameInit.cpp  GameLogic.cpp  GameLogic.h  GameMap.cpp  GamePlayerTurn.cpp  GameRender.cpp  GameState.h  GameUtils.cpp  RENDER.old  cells.h  constants.h  detect_islands.h  handleNetworkMessage.h  islands_utils.h  items.h  map.h  ship.cpp  ship.h  sync_data.cpp
src/game/bots/: enemy  pirate
src/game/buildings/: BaseBuild.cpp  BaseBuild.h  Cannon.h  CreateBuilding.cpp  Lighthouse.h  Port.cpp  Port.h
src/game/client/: ClientGame.h
src/game/entity/: BaseEntity.h  Enemy.h  EntityFuncs.cpp  Pirate.h  Player.h
src/game/game_states/: Game.cpp  Game.h  GameOverState.cpp  GameOverState.h  GameState.h  GameStateManager.cpp  GameStateManager.h  MainMenuState.cpp  MainMenuState.h  MyTurnState.cpp  MyTurnState.h  PauseState.cpp  PauseState.h  TroopSelectedState.cpp  TroopSelectedState.h  WaitForTurnState.cpp  WaitForTurnState.h
src/game/items/: BaseItem.h  Falcon.h  GodEye.h  Gold.h  Rod.h  Shovel.h  Spyglass.h  Tailwind.h  Treasure.h
src/game/lol/: cells.h  constants.h  detect_area.h
src/game/map/: Cell.h  GenerateMap.cpp  GenerateMap.h  MapFuncs.cpp  MapRender.h  MapReneder.cpp  MapReneder.h  PerlinNoise.h
src/game/server/: ServerGame.h
src/game/services/: navigation.h
src/game/troops/: BaseTroop.cpp  BaseTroop.h  Ship.cpp  Ship.h  Soldier.h
src/net/: Client.cpp  Client.h  NetworkConfig.h  Server.cpp  Server.h  game  game_network.cpp  game_network.h  main.cpp  p2p_node.cpp
src/render/: Colors.hpp  Game.cpp  Game.h  GameRender.cpp  GameRender.h  InputHandler.h  Renderer.h  draw_area.h  findHex.h  game.cpp  info_bars.h  input_manager.cpp  input_manager.h  interface.h  sprites.h
src/render/map/: CubePerlin.h  MapReneder.h
src/render/ui/: UIRenderer.cpp  UIRenderer.h  startUI.h
src/test/: GameRenderer.h  a.out  hexMap.h  map_sfml.cpp  new.cpp  sphr_map.cpp
src/textures/: EmbeddedResources.cpp  EmbeddedResources.h  UIfont.h
